<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/quiz_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/icon"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@id/icon" />


    <TextView
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="12dp"
        android:text="@string/start_new_game"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        app:drawableStartCompat="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@id/btnhighScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/btnhighScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:padding="12dp"
        android:text="@string/high_score"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        app:drawableStartCompat="@drawable/high_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnPlay"
        app:layout_constraintStart_toStartOf="@id/btnPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>